--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8888
 github.client.id=7f746da9e0679e7eda95
 github.client.secret=7647f6d1d9517dea837ccae5bba55c03051842ab
 github.redirect.uri=http://localhost:8888/callback
+spring.datasource.url=jdbc:h2:E:/SSM/community/h2
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
+
