--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,6 @@
 			<!--<optional>true</optional>-->
 		<!--</dependency>-->
 
-
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -99,6 +96,19 @@
 					<user>sa</user>
 					<password>123</password>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.4.200</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>com.h2database</groupId>
