--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.study.community.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 
+logging.file.name = logs/community.log
+logging.level.root = info
+logging.level.com.study.community.mapper=debug
 
