--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.study.community.model
 mybatis.mapper-locations=classpath:mapper/*.xml
-
 logging.file.name = logs/community.log
 logging.level.root = info
+logging.file.max-history=30
 logging.level.com.study.community.mapper=debug
 
