对知识点进行整理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,17 @@ server.port=8888
 github.client.id=7f746da9e0679e7eda95
 github.client.secret=7647f6d1d9517dea837ccae5bba55c03051842ab
 github.redirect.uri=http://localhost:8888/callback
+
 spring.datasource.url=jdbc:h2:E:/Java/SSM/community/h2
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+
+#\u4F7FMyBatis\u628A\u6570\u636E\u5E93\u4E0B\u5212\u7EBF\u6620\u5C04\u5230\u9A7C\u5CF0\u6807\u8BC6
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.study.community.model
 mybatis.mapper-locations=classpath:mapper/*.xml
+
 logging.file.name = logs/community.log
 logging.level.root = info
 logging.file.max-history=30
