部署环境分离

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ github.client.id=7f746da9e0679e7eda95
 github.client.secret=56d1febfa2d0da5de2ce41ac527dca7405dc8a2b
 github.redirect.uri=http://localhost:8888/callback
 
-spring.datasource.url=jdbc:mysql://localhost:3306/codexu
+spring.datasource.url=jdbc:mysql://localhost:3306/community
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #\u4F7FMyBatis\u628A\u6570\u636E\u5E93\u4E0B\u5212\u7EBF\u6620\u5C04\u5230\u9A7C\u5CF0\u6807\u8BC6
 mybatis.configuration.map-underscore-to-camel-case=true
