--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,27 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <db.url>jdbc:mysql://localhost:3306/community</db.url>
+                <db.user>root</db.user>
+                <db.password>admin</db.password>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!--<profile>-->
+            <!--<id>production</id>-->
+            <!--<properties>-->
+                <!--<db.url>jdbc:mysql://localhost:3306/codexu</db.url>-->
+                <!--<db.user>root</db.user>-->
+                <!--<db.password>admin</db.password>-->
+            <!--</properties>-->
+        <!--</profile>-->
+    </profiles>
 
     <dependencies>
         <dependency>
@@ -104,9 +125,9 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>6.2.2</version>
                 <configuration>
-                    <url>jdbc:mysql://localhost:3306/codexu</url>
-                    <user>root</user>
-                    <password>admin</password>
+                    <url>${db.url}</url>
+                    <user>${db.user}</user>
+                    <password>${db.password}</password>
                 </configuration>
                 <dependencies>
                     <!--<dependency>-->
